--- a/dev/04_Development/demo03/src/index.html
+++ b/dev/04_Development/demo03/src/index.html
@@ -2,19 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Demo02</title>
+  <title>Demo03</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>
-    .id{
-      height:auto !important;
-
-      min-height:344px;
-    }
-  </style>
 </head>
-<body>
-  <app-root id="app"></app-root>
+<body style="background-color: #FFF">
+  <app-root></app-root>
 </body>
 </html>
