--- a/dev/04_Development/demo02/src/index.html
+++ b/dev/04_Development/demo02/src/index.html
@@ -12,10 +12,14 @@
       min-height:344px;
     }
   </style>
+
+</head>
+<body>
+  <app-root id="app"></app-root>
   <script>
     window.onload = function(){
       adjust();
-      passInfo();
+      // passInfo();
     }
 
 
@@ -64,7 +68,7 @@
 
     function adjust() {
       let map = document.getElementById("planetMap");
-      let area=map.getElementsByTagName('area');
+      let area = map.getElementsByTagName('area');
 
       for (let i = 0; i < area.length; i++) {
         let oldCoords = area[i].getAttribute("coords");
@@ -157,8 +161,5 @@
       );
     }
   </script>
-</head>
-<body>
-  <app-root id="app"></app-root>
 </body>
 </html>
