--- a/dev/04_Development/demo02/src/index.html
+++ b/dev/04_Development/demo02/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Posture Right</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Posture Right" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     .id{
@@ -16,7 +16,36 @@
 </head>
 <body>
   <app-root id="app"></app-root>
+  <input type="file" id="fileReader" value="./seed/BodyPartsSeed.json">
   <script>
+
+    // We have tried following method form Internet, but failed to solve the error
+
+    // 1.
+    // var bodyJsonFile = './seed/BodyPartsSeed';
+    // var file  = new file(bodyJsonFile);
+    // var str = '';
+    //
+    // file.open("r");
+    // while (!file.eof) {
+    //   // read each line of text
+    //   str += file.readln() + "\n";
+    // }
+    // file.close();
+    // console.log(str);
+
+    // 2.
+    // window.onload = function (){
+  //   var url = "http://localhost:3000/BodyParts"
+  //   var request = new XMLHttpRequest();
+  //   request.open("get",url);
+  //   request.send((null));
+  //   request.onload = function (){
+  //     var json = JSON.parse(request.responseText);
+  //     console.log(json);
+  //   }
+  // }
+    // 3.
     // const {BarChartComponent} = require("./app/bar-chart/bar-chart.component");
     // import {BarChartComponent} from "./app/bar-chart/bar-chart.component";
     // import {Observable} from "rxjs";
@@ -48,6 +77,7 @@
     // }
     // retrieveBodyParts();
 
+    // Here's our stable solution.
     window.onload = function(){
       adjust();
       // passInfo();
@@ -70,10 +100,10 @@
         var rw = myImage.naturalWidth;
         var rh = myImage.naturalHeight;
       }
-      // 获取宽高
+      // retrieve height
       let pageWidth = rw;
       let pageHeight = rh;
-      // 图片原始尺寸
+      // original size of picture
       let imageWidth = 392;
       let imageHeight = 800;
 
@@ -81,10 +111,10 @@
 
       for (let i = 0; i < 2; i++) {
         if(i%2==0){
-          // 新的x轴坐标
+          // new axis x position
           each[i] = Math.round(parseInt(each[i]) * pageWidth / imageWidth).toString();
         }else{
-          // 新的y轴坐标
+          // new axis y position
           each[i] = Math.round(parseInt(each[i]) * pageHeight / imageHeight).toString();
         }
       }
